--- a/setup.cfg
+++ b/setup.cfg
@@ -149,7 +149,11 @@ ignore_errors = True
 ignore_errors = True
 
 # todo: add proper typing to this module...
-[mypy-pytorch_lightning.plugins.*]
+[mypy-pytorch_lightning.plugins.environments.*]
+ignore_errors = True
+
+# todo: add proper typing to this module...
+[mypy-pytorch_lightning.plugins.training_type.*]
 ignore_errors = True
 
 # todo: add proper typing to this module...
